<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Wallpaper</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="wallpaper_static">Static Wallpaper</string>
    <string name="wallpaper_dynamic">Dynamic Wallpaper</string>
    <string name="solid_color">Solid Color</string>
    <string name="gradient_color">Gradient Color</string>
    <string name="customize">Customize</string>
    <string name="wallpaper_name">Wallpaper</string>
    <string name="reset">Reset</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="prompt_version">Version:</string>
    <string name="dynamic_wallpaper_setting">Dynamic Wallpaper Setting</string>
    <string name="video_sound">Video Sound</string>
    <string name="video_volume">Video Volume</string>
</resources>